--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "The server for Signum Workshop",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "echo none",
+    "start": "node ."
   },
   "repository": {
     "type": "git",
