--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/ID10T-Errors/signumd#readme",
   "dependencies": {
     "body-parser": "^1.14.2",
+    "dockerode": "^2.2.8",
     "express": "^4.13.3"
   },
   "devDependencies": {
