--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The server for Signum Workshop",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "build": "echo none",
     "start": "node ."
   },
@@ -29,6 +29,9 @@
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
-    "babel-preset-es2015": "^6.3.13"
+    "babel-preset-es2015": "^6.3.13",
+    "better-assert": "^1.0.2",
+    "mocha": "^2.3.4",
+    "request": "^2.67.0"
   }
 }
